2002-03-24  Tom Tromey  <tromey@redhat.com>
	* java/awt/TextComponent.java (TextComponent): Editable by
	default.

	* java/awt/MenuItem.java (eventMask): No longer private.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@51456 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/Makefile.in
+++ b/gcc-3_1-branch/libjava/Makefile.in
@@ -67,6 +67,7 @@ AM_RUNTESTFLAGS = @AM_RUNTESTFLAGS@
 AR = @AR@
 AS = @AS@
 CC = @CC@
+CHECKREFSPEC = @CHECKREFSPEC@
 COMPPATH = @COMPPATH@
 CXX = @CXX@
 CXXCPP = @CXXCPP@
