--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -738,6 +738,7 @@ AC_SUBST(ZLIBS)
 AC_SUBST(SYS_ZLIBS)
 AC_SUBST(ZINCS)
 AC_SUBST(DIVIDESPEC)
+AC_SUBST(CHECKREFSPEC)
 AC_SUBST(EXCEPTIONSPEC)
 
 AM_CONDITIONAL(CANADIAN, test "$CANADIAN" = yes)
