* Makefile.in (attribs.o): Update. 	* attribs.c: Include langhooks.h. 	(decl_attributes): Use langhook. 	* c-decl.c (insert_default_attributes): Rename. 	* c-tree.h (c_insert_default_attributes): New. 	* langhooks-def.h (LANG_HOOKS_INSERT_DEFAULT_ATTRIBUTES):New. 	(LANG_HOOKS_INITIALIZER): Update. 	* langhooks.h (struct lang_hooks): New hook. 	* tree.h (insert_default_attributes): Remove. ada: 	* misc.c (insert_default_attributes): Remove. cp: 	* cp-lang.c (LANG_HOOKS_INSERT_DEFAULT_ATTRIBUTES): Redefine. 	* cp-tree.h (cxx_insert_default_attributes): New. 	* decl.c (insert_default_attributes): Rename. objc: 	* objc-lang.c (LANG_HOOKS_INSERT_DEFAULT_ATTRIBUTES): Redefine.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51488 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1214,7 +1214,7 @@ c-common.o : c-common.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(OBSTACK_H) \
 
 attribs.o : attribs.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(OBSTACK_H) flags.h \
 	toplev.h output.h c-pragma.h $(RTL_H) $(GGC_H) $(EXPR_H) $(TM_P_H) \
-	builtin-types.def $(TARGET_H)
+	builtin-types.def $(TARGET_H) langhooks.h
 
 c-format.o : c-format.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) \
 	$(C_COMMON_H) flags.h toplev.h intl.h diagnostic.h
