* rtlanal.c: Include flags.h 	(may_trap_p): Do not mark FP operations if trapping 	if !flag_trapping_math 	* Makefile.in (rtlanal.o): Add dependency on flag.h 	* ifcvt.c (noce_operand_ok): Avoid the lameness.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@51508 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1366,7 +1366,7 @@ print-rtl.o : print-rtl.c $(GCONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) \
 	$(CC) -c $(ALL_CFLAGS) -DGENERATOR_FILE $(ALL_CPPFLAGS) $(INCLUDES) $< $(OUTPUT_OPTION)
 
 rtlanal.o : rtlanal.c $(CONFIG_H) $(SYSTEM_H) toplev.h $(RTL_H) \
-   hard-reg-set.h $(TM_P_H) insn-config.h $(RECOG_H)
+   hard-reg-set.h $(TM_P_H) insn-config.h $(RECOG_H) flags.h
 
 errors.o : errors.c $(GCONFIG_H) $(SYSTEM_H) errors.h
 	$(CC) -c $(ALL_CFLAGS) -DGENERATOR_FILE $(ALL_CPPFLAGS) $(INCLUDES) $< $(OUTPUT_OPTION)
