* Makefile.in (convert.o, calls.o, expmed.o): Update. 	* attribs.c (handle_mode_attribute, handle_vector_size_attribute): 	Use new hooks. 	* builtin-types.def (BT_PTRMODE): Update. 	* c-common.c (type_for_size): Rename c_common_type_for_size. 	(type_for_mode): Similarly. 	(shorten_compare, pointer_int_sum, c_common_nodes_and_builtins): 	Use new hook. 	* c-bommon.h (c_common_type_for_size, c_common_type_for_mode): New. 	* c-decl.c (finish_enum, build_enumerator): Use new hooks. 	* c-lang.c (LANG_HOOKS_TYPE_FOR_MODE, LANG_HOOKS_TYPE_FOR_SIZE): 	Redefine. 	* c-typeck.c (common_type, comptypes, default_conversion): 	Use new hooks. 	* calls.c: Include langhooks.h. 	(emit_library_call_value_1): Use new hooks.  Avoid redundant 	calls. 	* convert.c: Include langhooks.h 	(convert_to_pointer, convert_to_integer): Use new hooks. 	* except.c (init_eh): Similarly. 	* expmed.c: Include langhooks.h. 	(expand_mult_add): Use new hooks. 	* expr.c (store_expr, store_constructor, expand_expr, do_jump, 	try_casesi): Similarly. 	* fold-const.c (optimize_bit_field_compare, make_range, 	decode_field_reference, fold_truthop, fold): Similarly. 	* function.c (assign_stack_local_1, assign_stack_temp_for_type, 	put_var_into_stack): Similarly. 	* langhooks-def.h (LANG_HOOKS_TYPE_FOR_MODE, 	LANG_HOOKS_TYPE_FOR_SIZE): New. 	(LANG_HOOKS_TYPES_INITIALIZER): Update. 	* langhooks.h (lang_hooks_for_types): New hooks. 	* stmt.c (expand_decl_cleanup, emit_case_nodes): Use new hooks. 	* tree.c (get_unwidened, get_narrower): Similarly. 	* tree.h (type_for_mode, type_for_size): Remove. 	* varasm.c (force_const_mem): Use new hooks. ada: 	* gigi.h (type_for_size, type_for_mode): Rename. 	* misc.c (LANG_HOOKS_TYPE_FOR_MODE, LANG_HOOKS_TYPE_FOR_SIZE): 	Redefine. 	* trans.c (tree_transform): Update. 	* utils.c (gnat_init_decl_processing, init_gigi_decls, 	builtin_function, float_type_for_size, signed_or_unsigned_type, 	build_vms_descriptor, unchecked_convert): Update. 	(type_for_mode, type_for_size): Rename. 	* 

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1319,7 +1319,8 @@ prefix.o: prefix.c $(CONFIG_H) $(SYSTEM_H) Makefile prefix.h
 	-DPREFIX=\"$(prefix)\" \
 	  -c $(srcdir)/prefix.c $(OUTPUT_OPTION)
 
-convert.o: convert.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h convert.h toplev.h
+convert.o: convert.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) flags.h convert.h \
+   toplev.h langhooks.h
 
 langhooks.o : langhooks.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) toplev.h \
    tree-inline.h $(RTL_H) insn-config.h integrate.h langhooks.h \
@@ -1395,11 +1396,12 @@ builtins.o : builtins.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
    $(TARGET_H) function.h $(REGS_H) $(EXPR_H) $(OPTABS_H) insn-config.h \
    $(RECOG_H) output.h typeclass.h hard-reg-set.h toplev.h hard-reg-set.h \
    except.h $(TM_P_H) $(PREDICT_H) libfuncs.h
-calls.o : calls.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h $(EXPR_H) \
+calls.o : calls.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
+   $(EXPR_H) langhooks.h \
    libfuncs.h $(REGS_H) toplev.h output.h function.h $(TIMEVAR_H) $(TM_P_H)
 expmed.o : expmed.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h  \
    insn-config.h $(EXPR_H) $(OPTABS_H) $(RECOG_H) real.h \
-   toplev.h $(TM_P_H)
+   toplev.h $(TM_P_H) langhooks.h
 explow.o : explow.c $(CONFIG_H) $(SYSTEM_H) $(RTL_H) $(TREE_H) flags.h \
    hard-reg-set.h insn-config.h $(EXPR_H) $(OPTABS_H) $(RECOG_H) \
    toplev.h function.h ggc.h $(TM_P_H)
