PR 12505 	* configure.in: Check for system-provided 'uchar' type. 	* configure, config.in: Regenerate. 	* cpphash.h: Only typedef 'uchar' if the system doesn't.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74146 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/configure.in
+++ b/gcc-3_3-branch/gcc/configure.in
@@ -817,6 +817,19 @@ if test $gcc_cv_type_clock_t = yes; then
   [Define if <time.h> defines clock_t.])
 fi
 
+AC_CACHE_CHECK(for uchar, gcc_cv_type_uchar,
+[AC_TRY_COMPILE([
+#include "ansidecl.h"
+#include "system.h"
+], 
+[if ((uchar *)0) return 0;
+ if (sizeof(uchar)) return 0;],
+ac_cv_type_uchar=yes, ac_cv_type_uchar=no)])
+if test $ac_cv_type_uchar = yes; then
+  AC_DEFINE(HAVE_UCHAR, 1,
+  [Define if <sys/types.h> provides uchar.])
+fi
+
 AC_ARG_ENABLE(initfini-array,
 	[  --enable-initfini-array	use .init_array/.fini_array sections],
 	gcc_cv_initfinit_array=$enableval, [gcc_AC_INITFINI_ARRAY])
