* Makefile.in (tree-optimize.o): Depend on cgraph.h 	* cgraph.h (cgraph_preserve_function_body_p): Declare. 	* cgraphunit.c (cgraph_preserve_function_body_p): New function. 	* tree-optimize.c: Include cgraph.h 	(clear_decl_rtl): Kill. 	(tree_rest_of_compilation): Use cgraph_preserve_function_body_p; 	do not clear DECL_RTL; do final ggc in the pushed context for nested 	functions;
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74210 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/Makefile.in
+++ b/tree-ssa-20020619-branch/gcc/Makefile.in
@@ -1593,7 +1593,8 @@ tree-optimize.o : tree-optimize.c $(TREE_FLOW_H) $(CONFIG_H) \
    $(SYSTEM_H) $(RTL_H) $(TREE_H) $(TM_P_H) $(EXPR_H) \
    $(GGC_H) output.h diagnostic.h errors.h flags.h tree-alias-common.h \
    $(TIMEVAR_H) $(TM_H) coretypes.h $(TREE_DUMP_H) toplev.h function.h \
-   langhooks.h flags.h cgraph.h tree-inline.h tree-mudflap.h $(GGC_H)
+   langhooks.h flags.h cgraph.h tree-inline.h tree-mudflap.h $(GGC_H) \
+   cgraph.h
 c-simplify.o : c-simplify.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) errors.h \
    $(C_TREE_H) $(C_COMMON_H) diagnostic.h $(TREE_SIMPLE_H) varray.h flags.h \
    langhooks.h toplev.h rtl.h $(TREE_FLOW_H) langhooks-def.h \
