* c-common.h (nonempty_fragment_reused):  New declaration. 	* c-common.c (nonempty_fragment_reused):  New variable. 	(cb_enter_fragment):  Set it. 	* c-objc-common.c (init_c_objc_common_eachsrc):  Clear it. 	* c-parse.in (program):  Use it in checking for empty source file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74215 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/compile-server-branch/gcc/c-parse.in
+++ b/compile-server-branch/gcc/c-parse.in
@@ -349,7 +349,7 @@ c_parse_init (void)
 
 %%
 program: /* empty */
-		{ if (pedantic)
+		{ if (pedantic && ! nonempty_fragment_reused)
 		    pedwarn ("ISO C forbids an empty source file");
 		}
 	| extdefs
