--- a/gcc-3_3-rhl-branch/gcc/Makefile.in
+++ b/gcc-3_3-rhl-branch/gcc/Makefile.in
@@ -89,8 +89,8 @@ coverageexts = .{da,bb,bbg}
 # with other compilers.  This is partially controlled by configure in
 # stage1, as not all versions of gcc understand -Wno-long-long.
 LOOSE_WARN = -W -Wall -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes
-STRICT_WARN = -Wtraditional @strict1_warn@
-STRICT2_WARN = -Wtraditional -pedantic -Wno-long-long
+STRICT_WARN = @strict1_warn@
+STRICT2_WARN = -pedantic -Wno-long-long
 
 # This is set by --enable-checking.  The idea is to catch forgotten
 # "extern" tags in header files.
