* tree-phinodes.c: Include rtl.h for ceil_log2. 	(ideal_phi_node_len): New function. 	(resize_phi_node): Make static. 	(make_phi_node): Use ideal_phi_node_len. 	(add_phi_arg): Likewise. 	* tree.h (resize_phi_node): Remove prototype. 	* Makefile.in (tree-phinodes.o): Depend on $(RTL_H).
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74238 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/Makefile.in
+++ b/tree-ssa-20020619-branch/gcc/Makefile.in
@@ -1561,7 +1561,7 @@ tree-ssanames.o : tree-ssanames.c $(CONFIG_H) $(SYSTEM_H) coretypes.h \
    $(TM_H) $(TREE_H) varray.h $(GGC_H) gt-tree-ssanames.h 
 tree-phinodes.o : tree-phinodes.c $(CONFIG_H) $(SYSTEM_H) coretypes.h \
    $(TM_H) $(TREE_H) varray.h $(GGC_H) $(BASIC_BLOCK_H) $(TREE_FLOW_H) \
-   gt-tree-phinodes.h
+   gt-tree-phinodes.h $(RTL_H)
 domwalk.o : domwalk.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) \
    $(TREE_H) $(BASIC_BLOCK_H) $(TREE_FLOW_H) domwalk.h $(GGC_H)
 tree-ssa-live.o : tree-ssa-live.c $(TREE_FLOW_H) $(CONFIG_H) $(SYSTEM_H) \
