--- a/tree-ssa-20020619-branch/gcc/c-parse.in
+++ b/tree-ssa-20020619-branch/gcc/c-parse.in
@@ -678,6 +678,7 @@ primary:
 		  if (!last_expr_type)
 		    last_expr_type = void_type_node;
 		  $$ = build1 (STMT_EXPR, last_expr_type, $1);
+		  STMT_LINENO ($$) = input_line;
 		  TREE_SIDE_EFFECTS ($$) = 1;
 		}
 	| compstmt_primary_start error ')'
