* c-parse.in (primary): Use annotate_with_locus instead of         STMT_LINENO for STMT_EXPR.         * c-simplify.c (gimplify_stmt_expr): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74298 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/c-parse.in
+++ b/tree-ssa-20020619-branch/gcc/c-parse.in
@@ -678,8 +678,8 @@ primary:
 		  if (!last_expr_type)
 		    last_expr_type = void_type_node;
 		  $$ = build1 (STMT_EXPR, last_expr_type, $1);
-		  STMT_LINENO ($$) = input_line;
 		  TREE_SIDE_EFFECTS ($$) = 1;
+		  annotate_with_locus ($$, input_location);
 		}
 	| compstmt_primary_start error ')'
 		{
