2003-12-04  H.J. Lu  <hongjiu.lu@intel.com>
	* Makefile.in (stmp-fixinc): Don't bail out if SYSTEM_HEADER_DIR
	does not exist and it's the default sys-include directory.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74303 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/Makefile.in
+++ b/gcc-3_3-branch/gcc/Makefile.in
@@ -2378,7 +2378,8 @@ stmp-fixinc: fixinc.sh gsyslimits.h
 	@if test ! -d ${SYSTEM_HEADER_DIR}; then \
 	  echo The directory that should contain system headers does not exist: >&2 ; \
 	  echo "  ${SYSTEM_HEADER_DIR}" >&2 ; \
-	  exit 1; \
+	  if test "x${SYSTEM_HEADER_DIR}" = "x${gcc_tooldir}/sys-include"; \
+	  then sleep 1; else exit 1; fi; \
 	fi
 	rm -rf include; mkdir include
 	-chmod a+rx include
