--- a/tree-ssa-20020619-branch/gcc/fortran/Make-lang.in
+++ b/tree-ssa-20020619-branch/gcc/fortran/Make-lang.in
@@ -75,7 +75,7 @@ F95_OBJS = $(F95_PARSER_OBJS) \
     fortran/trans-types.o fortran/trans-const.o fortran/trans-expr.o \
     fortran/trans-stmt.o fortran/trans-io.o fortran/trans-array.o \
     fortran/trans-intrinsic.o fortran/dependency.o fortran/trans-common.o \
-    fortran/trans-equivalence.o fortran/data.o
+    fortran/data.o
 
 # FIXME:
 # We rely on c-semantics to expand from GIMPLE to RTL.
@@ -83,7 +83,7 @@ F95_OBJS = $(F95_PARSER_OBJS) \
 F95_ADDITIONAL_OBJS = \
 	tree-cfg.o tree-dfa.o tree-optimize.o tree-simple.o \
 	tree-ssa.o tree-ssa-ccp.o tree-ssa-dce.o \
-	tree-alias-common.o tree-alias-type.o gimplify.o
+	tree-alias-common.o tree-alias-type.o gimplify.o stor-layout.o
 
 # GFORTRAN uses GMP for its internal arithmetics.
 F95_LIBS = $(GMPLIBS) $(LIBS)
@@ -286,6 +286,5 @@ fortran/trans-array.o: $(GFORTRAN_TRANS_DEPS)
 fortran/trans-intrinsic.o: $(GFORTRAN_TRANS_DEPS) gt-fortran-trans-intrinsic.h
 fortran/dependency.o: fortran/gfortran.h fortran/dependency.h
 fortran/trans-common.o: $(GFORTRAN_TRANS_DEPS) fortran/gfortran.h
-fortran/trans-equivalence.o: $(GFORTRAN_TRANS_DEPS) fortran/gfortran.h
 fortran/data.c: $(GFORTRAN_TRANS_DEPS)
 
