2003-12-08  Steven Bosscher  <stevenb@suse.de> 	    Jan Hubicka  <jh@suse.de>
	* gengtype-lex.l (IWOrD): Add HOST_WIDEST_INT
	* Makefile.in (function.o, reg-stack.o): Add missing dependency on
	basic-block.h.
	(GTFILES): Add basic-block.h and hwint.h.
	* basic-block.h (struct edge_def): Add GTY markers, make garbage
	collectable.  Make `insns' field GC safe depending on the setting
	of cfg_hooks.
	(struct basic_block_def): Add GTY markers, make garbage collectable.
	(tree_bb_root, tree_phi_root): Kill extern decls.
	(ENTRY_BLOCK_PTR, EXIT_BLOCK_PTR): Change from macro to variable
	(entry_exit_blocks): Kill.
	* cfg.c: Include ggc.h
	(bb_pool, edge_pool, entry_exit_blocks): Kill.
	(ENTRY_BLOCK_PTR, EXIT_BLOCK_PTR): Define.
	(init_flow): Do not create ppols; allocate entry/exit block.
	(free_edge, alloc_block, expunge_block, unchecked_make_edge): Use GGC.
	(compact_blocks): Don't update tree_bb_root and tree_phi_root.
	* cfgrtl.c (rtl_merge_blocks): Clear head pointer.
	* regs.h: Protect against multiple inclusion.
	* tree-cfg.c (obstack_tree_ann_obstack, first_block_tree_and_obj,
	tree_bb_root): Kill.
	(build_tree_cfg, create_bb, remove_bb, delete_tree_cfg): Don't
	touch tree_bb_root and tree_phi_root.
	(create_block_annotations): Do not initialize obstack.
	(free_block_annotations): Do not free obstack.
	(create_block_annotation): Use GGC.
	* tree-dfa.c (tree_phi_root): Kill.
	* tree-flow.h (bb_ann, bb_ann_d): Declare.  Add `phi_nodes' field.
	* tree-phinodes.c (create_phi_node, add_phi_arg, remove_phi_node,
	remove_all_phi_nodes_for): Use `phi_nodes' field in the bb
	annotation instead of tree_phi_root.
	* tree-flow-inline.h (phi_nodes, set_phi_nodes): Likewise.
	(add_dom_child, clear_dom_children): Use GGC.
	* tree-ssa-pre.c (code_motion): Use `phi_nodes' field in the bb
	annotation instead of tree_phi_root.
	* varray.h (union varray_data): Make basic_block_def and edge_def
	varrays garbage collectable.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74420 138bc75

--- a/tree-ssa-20020619-branch/gcc/Makefile.in
+++ b/tree-ssa-20020619-branch/gcc/Makefile.in
@@ -1682,7 +1682,7 @@ varasm.o : varasm.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(TREE_H) $(RTL_
 function.o : function.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) $(TREE_H) \
    flags.h function.h $(EXPR_H) $(OPTABS_H) libfuncs.h $(REGS_H) hard-reg-set.h \
    insn-config.h $(RECOG_H) output.h toplev.h except.h $(HASHTAB_H) $(GGC_H) \
-   $(TM_P_H) langhooks.h gt-function.h $(TARGET_H)
+   $(TM_P_H) langhooks.h gt-function.h $(TARGET_H) basic-block.h
 stmt.o : stmt.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) $(TREE_H) flags.h \
    function.h insn-config.h hard-reg-set.h $(EXPR_H) libfuncs.h except.h \
    $(LOOP_H) $(RECOG_H) toplev.h output.h varray.h $(GGC_H) $(TM_P_H) \
@@ -1942,7 +1942,7 @@ recog.o : recog.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) function.
    $(INSN_ATTR_H) real.h toplev.h output.h reload.h $(TM_P_H)
 reg-stack.o : reg-stack.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) $(TREE_H) \
    $(RECOG_H) $(REGS_H) hard-reg-set.h flags.h insn-config.h toplev.h reload.h \
-   varray.h function.h $(TM_P_H) $(GGC_H) gt-reg-stack.h
+   varray.h function.h $(TM_P_H) $(GGC_H) gt-reg-stack.h basic-block.h
 sreal.o: sreal.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) sreal.h
 predict.o: predict.c $(CONFIG_H) $(SYSTEM_H) coretypes.h $(TM_H) $(RTL_H) $(TREE_H) \
    flags.h insn-config.h $(BASIC_BLOCK_H) $(REGS_H) hard-reg-set.h output.h toplev.h \
@@ -2193,9 +2193,9 @@ GTFILES = $(srcdir)/input.h $(srcdir)/coretypes.h $(srcdir)/cpplib.h \
   $(host_xm_file_list) $(tm_file_list) $(HASHTAB_H) $(SPLAY_TREE_H) \
   $(srcdir)/bitmap.h $(srcdir)/coverage.c $(srcdir)/function.h  $(srcdir)/rtl.h \
   $(srcdir)/optabs.h $(srcdir)/tree.h $(srcdir)/libfuncs.h $(srcdir)/hashtable.h \
-  $(srcdir)/real.h $(srcdir)/varray.h $(srcdir)/insn-addr.h \
+  $(srcdir)/real.h $(srcdir)/varray.h $(srcdir)/insn-addr.h $(srcdir)/hwint.h \
   $(srcdir)/cselib.h $(srcdir)/basic-block.h  $(srcdir)/cgraph.h \
-  $(srcdir)/c-common.h $(srcdir)/c-tree.h \
+  $(srcdir)/c-common.h $(srcdir)/c-tree.h $(srcdir)/basic-block.h \
   $(srcdir)/alias.c $(srcdir)/bitmap.c $(srcdir)/cselib.c $(srcdir)/cgraph.c \
   $(srcdir)/dependence.c  \
   $(srcdir)/dbxout.c $(srcdir)/dwarf2out.c $(srcdir)/dwarf2asm.c \
