2003-12-08  Andrew Pinski  <pinskia@physics.uc.edu>
        PR libmudflap/12670
        * configure.in: Add check for see if
        socklen_t typedef is in sys/socket.h.
        * mf-hooks1.c: Add define if socklen_t
        is not typedef.
        * mf-hooks2.c: Likewise.
        * mf-hooks3.c: Likewise.
        * config.h.in: Regen.
        * configure: Regen.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74444 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/libmudflap/config.h.in
+++ b/tree-ssa-20020619-branch/libmudflap/config.h.in
@@ -33,9 +33,6 @@
 /* Define if you have the <execinfo.h> header file.  */
 #undef HAVE_EXECINFO_H
 
-/* Define if you have the <pthread.h> header file.  */
-#undef HAVE_PTHREAD_H
-
 /* Define if you have the <signal.h> header file.  */
 #undef HAVE_SIGNAL_H
 
@@ -53,6 +50,12 @@
 
 /* union semun defined in sys/ipc.h or sys/sem.h */
 #undef HAVE_UNION_SEMUN
+
+/* Define it socklen_t typedef is in sys/socket.h. */
+#undef HAVE_SOCKLEN_T
+
+/* define if you have <pthread.h> */
+#undef HAVE_PTHREAD_H
 
 /* pthread_create symbol version */
 #undef PTHREAD_CREATE_VERSION
